--- a/Asgt1Q1.ipynb
+++ b/Asgt1Q1.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q1"
+    "## Q1 Find the unique words and the top 10 most frequent words with their frequency in hte file "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -42,9 +42,10 @@
     }
    ],
    "source": [
-    "austenCount = gutenberg.words('austen-persuasion.txt')\n",
-    "austenUniqueCount = len(set([word for word in austenCount]))\n",
-    "print('The total count of words in austen-persuasion.txt is:', len(austenCount))\n",
+    "austenWords = gutenberg.words('austen-persuasion.txt')\n",
+    "#austenUniqueCount = len(set([word for word in austenWords]))\n",
+    "austenUniqueCount = len(set(austenWords))\n",
+    "print('The total count of words in austen-persuasion.txt is:', len(austenWords))\n",
     "print('The number of unique words in austen-persuasion.txt is:',austenUniqueCount)"
    ]
   },
@@ -57,14 +58,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The top 10 most frequent words and their frequency are:\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(';', 1290),\n",
+       " ('was', 1330),\n",
+       " ('in', 1346),\n",
+       " ('a', 1529),\n",
+       " ('of', 2564),\n",
+       " ('and', 2739),\n",
+       " ('.', 2741),\n",
+       " ('to', 2775),\n",
+       " ('the', 3120),\n",
+       " (',', 6750)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "austenWords = gutenberg.words('austen-persuasion.txt')\n",
+    "D = {}\n",
+    "for word in austenWords:\n",
+    "    if word in D:\n",
+    "        val = D[word]\n",
+    "        val = val + 1\n",
+    "        D[word] = val\n",
+    "    else:\n",
+    "        D[word] = 1\n",
+    "sortedDict = collections.OrderedDict(sorted(D.items(), key=lambda t: t[1]))\n",
+    "sortedList = list(sortedDict.items())\n",
+    "print('The top 10 most frequent words and their frequency are:\\n')\n",
+    "sortedList[-10:]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
