--- a/Asgt1Q1.ipynb
+++ b/Asgt1Q1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q1 Find the unique words and the top 10 most frequent words with their frequency in hte file "
+    "## Q1 Find the unique words and the top 10 most frequent words with their frequency in hte file austen-persuasion.txt"
    ]
   },
   {
@@ -16,6 +16,61 @@
    "outputs": [],
    "source": [
     "from nltk.corpus import gutenberg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Under package Gutenberg, see what files are in it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The files under package Gutenberg are listed below:\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['austen-emma.txt',\n",
+       " 'austen-persuasion.txt',\n",
+       " 'austen-sense.txt',\n",
+       " 'bible-kjv.txt',\n",
+       " 'blake-poems.txt',\n",
+       " 'bryant-stories.txt',\n",
+       " 'burgess-busterbrown.txt',\n",
+       " 'carroll-alice.txt',\n",
+       " 'chesterton-ball.txt',\n",
+       " 'chesterton-brown.txt',\n",
+       " 'chesterton-thursday.txt',\n",
+       " 'edgeworth-parents.txt',\n",
+       " 'melville-moby_dick.txt',\n",
+       " 'milton-paradise.txt',\n",
+       " 'shakespeare-caesar.txt',\n",
+       " 'shakespeare-hamlet.txt',\n",
+       " 'shakespeare-macbeth.txt',\n",
+       " 'whitman-leaves.txt']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('The files under package Gutenberg are listed below:\\n')\n",
+    "gutenberg.fileids()"
    ]
   },
   {
