--- a/Asgt1Q4.ipynb
+++ b/Asgt1Q4.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q4"
+    "## Q4 Find total posts by a specific user and then find the number of unique user in each age group."
    ]
   },
   {
