Created dir structure

--- a/Asgt1/Asgt1Q7.ipynb
+++ b/Asgt1/Asgt1Q7.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -45,18 +45,16 @@
       "m Male percentage: 84.34 Female percentage: 15.66\n",
       "n Male percentage: 55.32 Female percentage: 44.68\n",
       "o Male percentage: 83.33 Female percentage: 16.67\n",
-      "p Male percentage: 90.00 Female percentage: 10.00\n"
-     ]
-    },
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-2f77ad94ebbb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0mfemaleCount\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfemaleCount\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mtotalCount\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmaleCount\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mfemaleCount\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchar\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Male percentage:'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"{0:.2f}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mmaleCount\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mtotalCount\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Female percentage:'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"{0:.2f}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mfemaleCount\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mtotalCount\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+      "p Male percentage: 90.00 Female percentage: 10.00\n",
+      "r Male percentage: 80.17 Female percentage: 19.83\n",
+      "s Male percentage: 71.21 Female percentage: 28.79\n",
+      "t Male percentage: 70.69 Female percentage: 29.31\n",
+      "u Male percentage: 66.67 Female percentage: 33.33\n",
+      "v Male percentage: 88.89 Female percentage: 11.11\n",
+      "w Male percentage: 77.27 Female percentage: 22.73\n",
+      "x Male percentage: 50.00 Female percentage: 50.00\n",
+      "y Male percentage: 41.87 Female percentage: 58.13\n",
+      "z Male percentage: 73.33 Female percentage: 26.67\n"
      ]
     }
    ],
@@ -73,7 +71,8 @@
     "        if word[-1] == char:\n",
     "            femaleCount = femaleCount + 1\n",
     "    totalCount = maleCount + femaleCount\n",
-    "    print(char, 'Male percentage:', \"{0:.2f}\".format(100*maleCount/totalCount), 'Female percentage:', \"{0:.2f}\".format(100*femaleCount/totalCount))"
+    "    if totalCount > 1:\n",
+    "        print(char, 'Male percentage:', \"{0:.2f}\".format(100*maleCount/totalCount), 'Female percentage:', \"{0:.2f}\".format(100*femaleCount/totalCount))"
    ]
   },
   {
@@ -83,9 +82,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "for char in "
-   ]
+   "source": []
   }
  ],
  "metadata": {
