--- a/Asgt2/Asgt2Q1.ipynb
+++ b/Asgt2/Asgt2Q1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Learn and understand Zipf’s Law"
+    "## Q1 Learn and understand Zipf’s Law"
    ]
   },
   {
@@ -16,53 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from nltk.corpus import gutenberg\n",
-    "import glob"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['austen-emma.txt',\n",
-       " 'austen-persuasion.txt',\n",
-       " 'austen-sense.txt',\n",
-       " 'bible-kjv.txt',\n",
-       " 'blake-poems.txt',\n",
-       " 'bryant-stories.txt',\n",
-       " 'burgess-busterbrown.txt',\n",
-       " 'carroll-alice.txt',\n",
-       " 'chesterton-ball.txt',\n",
-       " 'chesterton-brown.txt',\n",
-       " 'chesterton-thursday.txt',\n",
-       " 'edgeworth-parents.txt',\n",
-       " 'melville-moby_dick.txt',\n",
-       " 'milton-paradise.txt',\n",
-       " 'shakespeare-caesar.txt',\n",
-       " 'shakespeare-hamlet.txt',\n",
-       " 'shakespeare-macbeth.txt',\n",
-       " 'whitman-leaves.txt']"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gutenberg.fileids()"
+    "import glob\n",
+    "import collections\n",
+    "import string\n",
+    "import csv"
    ]
   },
   {
@@ -87,7 +51,49 @@
    ],
    "source": [
     "path = glob.glob('C:/Users/parit/AppData/Roaming/nltk_data/corpora/gutenberg/chesterton*')\n",
-    "path"
+    "path   #taking the gutenberg dataset - 3 chesterton books"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "chesWords = gutenberg.words(path)\n",
+    "D = {}\n",
+    "for word in chesWords:        #Getting the word count for the above 3 books\n",
+    "    word = word.lower()\n",
+    "    if word in D:\n",
+    "        val = D[word]\n",
+    "        val = val + 1\n",
+    "        D[word] = val\n",
+    "    else:\n",
+    "        D[word] = 1\n",
+    "sortedDict = collections.OrderedDict(sorted(D.items(), key=lambda t: t[1],reverse = True)) \n",
+    "sortedList = list(sortedDict.items())   #Sorting the (word,wordCount) tuple based on the count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open('chestertonWordRanks.csv', 'w', newline = '') as outputFile:  #Creating a csv file with 'write' permission\n",
+    "    csvWriter = csv.writer(outputFile, delimiter = ',')\n",
+    "    rank = 0\n",
+    "    for wordCountTuple in sortedList:      #Calculating the word rank based on word count in the sorted list\n",
+    "        rank = rank + 1\n",
+    "        word = wordCountTuple[0]\n",
+    "        count = wordCountTuple[1]\n",
+    "        word = [c for c in word if c not in set(string.punctuation)]   #Removing all the punctuation marks\n",
+    "        if word:\n",
+    "            csvWriter.writerow((''.join(word), rank, count))\n"
    ]
   },
   {
