--- a/Asgt2/Asgt2Q2P1.ipynb
+++ b/Asgt2/Asgt2Q2P1.ipynb
@@ -37,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "def createDirPath(directoryList, fileName):\n",
+    "def createDirPath(directoryList, fileName):              # function to form a path with slashes ('/')\n",
     "    fileNameCorrected = ''.join(c for c in fileName if c not in string.punctuation)\n",
     "    totalPath = 'DataProcessed/'\n",
     "    for dirPath in directoryList:\n",
@@ -67,7 +67,7 @@
     "\n",
     "print('Started the process of organizing files into a well-formed structure based on the values inside the json files.')\n",
     "\n",
-    "for jsonFile in glob.glob(dataFolder):\n",
+    "for jsonFile in glob.glob(dataFolder):             # read files one by one and process them\n",
     "    with open(jsonFile, 'r') as openJson:\n",
     "        jsonContent = json.load(openJson)\n",
     "        countryCode = jsonContent['location']['country']\n",
@@ -77,14 +77,14 @@
     "        categoryList = jsonContent['categories']\n",
     "        itemName = jsonContent['name']\n",
     "        \n",
-    "        for cat in categoryList:\n",
+    "        for cat in categoryList:            # for each category the file belongs to, copy for each category\n",
     "            fileDestination = createDirPath([countryCode, stateCode, cityName, itemType, cat['alias']], itemName)\n",
-    "            if not os.path.exists(os.path.dirname(fileDestination)):\n",
+    "            if not os.path.exists(os.path.dirname(fileDestination)): # create directory when needed\n",
     "                os.makedirs(os.path.dirname(fileDestination))\n",
     "                \n",
     "            shutil.copyfile(jsonFile, fileDestination)\n",
     "\n",
-    "print('Completed organizing files into a well-formed structure based on the values inside the json files.')            "
+    "print('Completed organizing files.')            "
    ]
   },
   {
