--- a/Asgt2/AsgtQ2P2.ipynb
+++ b/Asgt2/AsgtQ2P2.ipynb
@@ -98,6 +98,7 @@
     "print('Started the process of parsing the files.')\n",
     "with open('restaurantHours.csv', 'w', newline = '',  encoding='utf-8') as restaurantHoursFile:\n",
     "    timingsWriter = csv.writer(restaurantHoursFile, delimiter =',')\n",
+    "    timingsWriter.writerow(['Name of restaurant','Country Code','City Name','Day','Start Time','End Time'])\n",
     "    for timing in allRestaurantHours:    # write contents of the list allRestaurantHours to csv\n",
     "        timingsWriter.writerow(timing)\n",
     "print('Completed saving the timings information to the csv')\n"
