--- a/Asgt2/AsgtQ2P2.ipynb
+++ b/Asgt2/AsgtQ2P2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -64,7 +64,7 @@
     "                cityName = jsonContent['location']['city']        \n",
     "                itemName = jsonContent['name']\n",
     "                \n",
-    "                restaurantHours = [(itemName, countryCode, cityName, details['day'], details['start'], details['end']) \n",
+    "                restaurantHours = [(itemName, countryCode, cityName, details['day'], details['start'], details['start'], details['end']) \n",
     "                                   for details in timings[0]['open']]\n",
     "                \n",
     "                allRestaurantHours += restaurantHours # save details for all restaurants in allRestaurantHours\n",
@@ -90,6 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Started the process of parsing the files.\n",
       "Completed saving the timings information to the csv\n"
      ]
     }
