--- a/Midterm/Q2/SourceCode/Analysis 1.ipynb
+++ b/Midterm/Q2/SourceCode/Analysis 1.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -32,7 +32,8 @@
     "import os\n",
     "import glob\n",
     "import json\n",
-    "from datetime import datetime\n"
+    "from datetime import datetime\n",
+    "from collections import Counter\n"
    ]
   },
   {
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -66,132 +67,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "US\n",
-      "US\n"
+      "Yearly Accidents Count:\n",
+      "\n",
+      "year\t count\n",
+      "('2012', 68)\n",
+      "('2013', 28)\n",
+      "('2014', 24)\n",
+      "('2015', 29)\n",
+      "('2016', 61)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['2012',\n",
-       " '2015',\n",
-       " '2014',\n",
-       " '2015',\n",
-       " '2016',\n",
-       " '2013',\n",
-       " '2014',\n",
-       " '2013',\n",
-       " '2013',\n",
-       " '2016',\n",
-       " '2016',\n",
-       " '2013',\n",
-       " '2012',\n",
-       " '2013',\n",
-       " '2012',\n",
-       " '2015',\n",
-       " '2015',\n",
-       " '2015',\n",
-       " '2016',\n",
-       " '2012',\n",
-       " '2013',\n",
-       " '2015',\n",
-       " '2015',\n",
-       " '2016',\n",
-       " '2014',\n",
-       " '2014',\n",
-       " '2016',\n",
-       " '2013',\n",
-       " '2012',\n",
-       " '2012',\n",
-       " '2013',\n",
-       " '2013',\n",
-       " '2013',\n",
-       " '2013',\n",
-       " '2014',\n",
-       " '2015',\n",
-       " '2015',\n",
-       " '2016',\n",
-       " '2016',\n",
-       " '2013',\n",
-       " '2012',\n",
-       " '2016',\n",
-       " '2014',\n",
-       " '2015',\n",
-       " '2015',\n",
-       " '2012',\n",
-       " '2015',\n",
-       " '2012',\n",
-       " '2014',\n",
-       " '2016',\n",
-       " '2013',\n",
-       " '2014',\n",
-       " '2016',\n",
-       " '2016',\n",
-       " '2013',\n",
-       " '2012',\n",
-       " '2013',\n",
-       " '2012',\n",
-       " '2012',\n",
-       " '2012',\n",
-       " '2012',\n",
-       " '2012',\n",
-       " '2013',\n",
-       " '2013',\n",
-       " '2013',\n",
-       " '2013',\n",
-       " '2013',\n",
-       " '2013',\n",
-       " '2014',\n",
-       " '2014',\n",
-       " '2014',\n",
-       " '2014',\n",
-       " '2014',\n",
-       " '2014',\n",
-       " '2014',\n",
-       " '2014',\n",
-       " '2012',\n",
-       " '2012',\n",
-       " '2012',\n",
-       " '2012',\n",
-       " '2014',\n",
-       " '2014',\n",
-       " '2015',\n",
-       " '2015',\n",
-       " '2015',\n",
-       " '2015',\n",
-       " '2015',\n",
-       " '2015',\n",
-       " '2016',\n",
-       " '2016',\n",
-       " '2014',\n",
-       " '2014',\n",
-       " '2015',\n",
-       " '2013',\n",
-       " '2016',\n",
-       " '2013',\n",
-       " '2013',\n",
-       " '2013',\n",
-       " '2015',\n",
-       " '2016',\n",
-       " '2015',\n",
-       " '2013']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Read docs from outside US\n",
     "\n",
     "yearly_accidents = []\n",
     "\n",
+    "us_to_be_done = True\n",
     "for docs_path_countries in glob.glob(path_to_docs + '/*'):\n",
     "    \n",
     "    if  ('United States' in docs_path_countries) or ('US' in docs_path_countries):\n",
-    "        print('US')\n",
-    "    else:    \n",
+    "\n",
+    "        # Read docs from inside US\n",
+    "        if us_to_be_done:\n",
+    "            us_to_be_done = False\n",
+    "            for docs_path_states in glob.glob(path_to_docs + '/US/*'):\n",
+    "                for json_file in glob.glob(docs_path_states + '/*'):            \n",
+    "                    with open(json_file, 'r') as json_doc:\n",
+    "                        json_obj = json.loads(json_doc.read())\n",
+    "                        pub_date_str = json_obj['pub_date']\n",
+    "                        pub_datetime = datetime.strptime(pub_date_str[0:19], \"%Y-%m-%dT%H:%M:%S\")\n",
+    "                        year_number = pub_datetime.strftime(\"%Y\")\n",
+    "                        yearly_accidents.append(year_number)\n",
+    "                               \n",
+    "    else:\n",
+    "        # Read docs from outside US\n",
+    "\n",
     "        for json_file in glob.glob(docs_path_countries + '/*'):            \n",
     "            with open(json_file, 'r') as json_doc:\n",
     "                json_obj = json.loads(json_doc.read())\n",
@@ -199,86 +109,21 @@
     "                pub_datetime = datetime.strptime(pub_date_str[0:19], \"%Y-%m-%dT%H:%M:%S\")\n",
     "                year_number = pub_datetime.strftime(\"%Y\")\n",
     "                yearly_accidents.append(year_number)\n",
-    "                \n",
-    "                \n",
-    "yearly_accidents        \n",
-    "        \n"
+    "                        \n",
+    "wordcount = Counter(yearly_accidents)\n",
+    "print('Yearly Accidents Count:\\n')\n",
+    "print('year\\t','count')\n",
+    "for i in sorted(wordcount.items(), key=lambda x:x[0]):\n",
+    "    print(i)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
    "source": [
-    "\n",
-    "# data to plot\n",
-    "n_groups = 4\n",
-    "means_frank = (90, 55, 40, 65)\n",
-    "means_guido = (85, 62, 54, 20)\n",
-    " \n",
-    "# create plot\n",
-    "fig, ax = plt.subplots()\n",
-    "index = np.arange(n_groups)\n",
-    "bar_width = 0.35\n",
-    "opacity = 0.8\n",
-    " \n",
-    "rects1 = plt.bar(index, means_frank, bar_width,\n",
-    "                 alpha=opacity,\n",
-    "                 color='b',\n",
-    "                 label='Frank')\n",
-    " \n",
-    "rects2 = plt.bar(index + bar_width, means_guido, bar_width,\n",
-    "                 alpha=opacity,\n",
-    "                 color='g',\n",
-    "                 label='Guido')\n",
-    " \n",
-    "plt.xlabel('Person')\n",
-    "plt.ylabel('Scores')\n",
-    "plt.title('Scores by person')\n",
-    "plt.xticks(index + bar_width, ('A', 'B', 'C', 'D'))\n",
-    "plt.legend()\n",
-    " \n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "> ### The no of accidents declined after 2012, but they are on the rise again. We need to be careful!"
    ]
   }
  ],
