--- a/Asgt2/AsgtQ2P2.ipynb
+++ b/Asgt2/AsgtQ2P2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -64,7 +64,7 @@
     "                cityName = jsonContent['location']['city']        \n",
     "                itemName = jsonContent['name']\n",
     "                \n",
-    "                restaurantHours = [(itemName, countryCode, cityName, details['day'], details['start'], details['start'], details['end']) \n",
+    "                restaurantHours = [(itemName, countryCode, cityName, details['day'], details['start'][:2], details['start'][2:], details['end'][:2], details['end'][2:]) \n",
     "                                   for details in timings[0]['open']]\n",
     "                \n",
     "                allRestaurantHours += restaurantHours # save details for all restaurants in allRestaurantHours\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +99,7 @@
     "print('Started the process of parsing the files.')\n",
     "with open('restaurantHours.csv', 'w', newline = '',  encoding='utf-8') as restaurantHoursFile:\n",
     "    timingsWriter = csv.writer(restaurantHoursFile, delimiter =',')\n",
-    "    timingsWriter.writerow(['Name of restaurant','Country Code','City Name','Day','Start Time','End Time'])\n",
+    "    timingsWriter.writerow(['Name of restaurant','Country Code','City Name','Day','Start Time Hour','Start Time Minute','End Time Hour', 'End Time Minute'])\n",
     "    for timing in allRestaurantHours:    # write contents of the list allRestaurantHours to csv\n",
     "        timingsWriter.writerow(timing)\n",
     "print('Completed saving the timings information to the csv')\n"
