--- a/Final/Analysis/Analysis 3.ipynb
+++ b/Final/Analysis/Analysis 3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis 2: Distribution of US govt. spendings across different departments and vendors in the states MA and PA"
+    "## Analysis 3:"
    ]
   },
   {
@@ -14,13 +14,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "%matplotlib inline"
-   ]
+   "source": []
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda root]",
    "language": "python",
